src/components/drop-down/drop-down.module.css
.container {
	display: flex;
	flex-direction: column;
}

.button {
	display: flex;
	align-items: center;
	background-color: transparent;
	border: none;
	cursor: pointer;
	padding: 0;
	gap: 0.3rem;
}

.content {
	display: flex;
	flex-direction: column;
}

